# mailgw-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: webhook_messages.py
mailgw/: __init__.py  client.py  exceptions.py
mailgw/models/: __init__.py  account.py  domain.py  message.py  source.py  token.py
mailgw/resources/: __init__.py  accounts.py  domains.py  messages.py  sources.py  tokens.py
